# Marcobisky.github.io

./: .gitignore  404.html  _dark-theme.scss  _quarto.yml  blog.qmd  cloudflare-analytics.html  index.html  index.qmd  index.xml  quarto-deps.sh  sitemap.xml  story.qmd
.quarto/idx/: blog.qmd.json  index.qmd.json
.quarto/xref/: 137deda6  1664bce2  1f894a3f  2651f53c  46020398  4a2cdd68  5226e66c  653cb226  73991cd1  87883f6f  8a058f6c  9aeed96a  9b420a0f  INDEX  c161d28b  cd7d39f3  dab052ad  dbdfadc0  dd3ce80f  e859a90a  f13e9cec  f15e34ff
_site/: blog-r.xml  search.json  sitemap.xml
about/: index.html
about-us/: index.html
ar/: 404.html  index.html  index.xml
ar/categories/: index.html  index.xml
ar/post/: index.html  index.xml
ar/tags/: index.html  index.xml
archives/: index.html
categories/: index.html  index.xml
categories/comm/: index.html  index.xml
categories/cs/: index.html  index.xml
categories/mac/: index.html  index.xml
categories/math/: index.html  index.xml
cv/: cv2.css  index.qmd  index.tex  web.qmd
docs/: CNAME  blog-r.xml  blog.html  blog.xml  index.html  listings.json  robots.txt  search.json  sitemap.xml  story.html
en/: index.html  sitemap.xml
links/: index.html
p/: index.html
page/: index.html  index.xml
post/: index.html  index.xml
search/: index.html  index.json
tags/: index.html  index.xml
tinyml/: .staticrypt.json  HLS-design.qmd  TinyML.bib  _quarto.yml  cc-cpu.qmd  cc-fpga.qmd  cc-gpu.qmd  encrypt.R  env-setup.qmd  gitgraph-gen.py  glossary.qmd  index.qmd  my-riscv-gitgraph.mmd  resources.qmd  terms.qmd  verilog.qmd  yolo.qmd
tinyml/cc-coding/src/cmake/demo-proj/: CMakeLists.txt  main.cc
tinyml/cc-coding/src/cmake/demo-proj/math/: CMakeLists.txt  utils.cc  utils.h
ts/: main.js
zh-cn/: 404.html  index.html  index.xml  sitemap.xml
(+599 files in other folders)
